# REG-Player

./: .gitignore  ANTI_DRIFT.md  CHANGELOG.md  CMakeLists.txt  LICENSE  NOTICES.md  README.md
assets/icons/: REMIX-LICENSE.txt
cmake/: aarch64-multiarch.cmake  aarch64-toolchain.cmake
docs/: CROSSCOMPILE.md
packaging/: regplayer-launch.sh  regplayer.6  regplayer.desktop
src/: assets.cpp  assets.h  background.cpp  background.h  browser.cpp  browser.h  categories.cpp  categories.h  chiptune.cpp  chiptune.h  common.h  fft.cpp  fft.h  gamepad.cpp  gamepad.h  history.cpp  history.h  image_view.cpp  image_view.h  image_viewer.cpp  image_viewer.h  indexing.cpp  indexing.h  main.cpp  metadata.cpp  metadata.h  music_player.cpp  music_player.h  music_view.cpp  music_view.h  opus_audio.cpp  opus_audio.h  persist.cpp  persist.h  player.cpp  player.h  render.cpp  render.h  settings.cpp  settings.h  (+17 more)
